Bug fixes