@@ -150,6 +150,8 @@
                 <value>-Djava.security.egd=file:/dev/./urandom</value>
                 <value>--add-opens</value>
                 <value>java.xml/jdk.xml.internal=ALL-UNNAMED</value>
+                <value>--add-opens</value>
+                <value>java.base/jdk.internal.loader=ALL-UNNAMED</value>
               </jvmArgs>
             </configuration>
           </plugin>
